# shortcut-catapult

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: pr.yml
src/: apply.rs  cli.rs  config.rs  daemon.rs  lib.rs  main.rs  systemd.rs
src/matching/: exact.rs  fuzzy.rs  list.rs  mod.rs  prefix.rs  regex.rs
tests/: apply.rs  daemon.rs  fuzzy.rs  log_trace.rs  prefix.rs  regex.rs  systemd.rs
