[package]
name = "shortcut-catapult"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
libsystemd = "0.7.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
strsim = "0.11.1"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "fs"] }
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-log = "0.2.0"
once_cell = "1.19.0"
url = "2.5.4"
xdg = "3.0.0"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.1.1"
predicates = "3.1.0"
reqwest = "0.11.24"
